locust/kubernetes/master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
  namespace: locust
  labels:
    app: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
    spec:
      containers:
      - name: locust-master
        image: hmcts/locust-k8s
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "2000m"
        ports:
        - name: web
          containerPort: 8089
          protocol: TCP
        - name: listen-1
          containerPort: 5557
          protocol: TCP
        - name: listen-2
          containerPort: 5558
          protocol: TCP
        volumeMounts:
        - mountPath: /locust-tasks
          name: tasks
      volumes:
        - name: tasks
          configMap:
            name: locust-tasks
            items:
            - key: locust-tasks
              path: locustfile.py
---
kind: Service
apiVersion: v1
metadata:
  name: locust-master
  namespace: locust
  labels:
    app: master
spec:
  ports:
    - port: 80
      targetPort: 8089
      protocol: TCP
      name: web
    - port: 5557
      targetPort: 5557
      protocol: TCP
      name: slave-1
    - port: 5558
      targetPort: 5558
      protocol: TCP
      name: slave-2
  selector:
    app: master
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: locust-master-ingress
  namespace: locust
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: locust.service.core-compute-preview.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: locust-master
          servicePort: 80
